Make submode mapping more explisit